# Final-Project

./: .gitignore  README.md
.github/workflows/: cd-backend.yml  ci-backend.yml  ci-cd-backend.yml  leetscrape.yml
POC/: Reddit_scraping_poc.py  coursera_scrapper.py  linkedin_jobs_with_descriptions.csv  linkedin_scraping_poc.py  pyproject.toml  streamlit_app.py
POC/leetscrape_POC/: code_checker_with_UI.py  pyproject.toml  test.py  test2.py
airflow/: .dockerignore  Dockerfile  docker-compose.yaml  docker-compose.yml  pyproject.toml  trigger_dag.py
airflow/dags/: coursera_dag.py  pinecone_dag.py  scrape_jobs_dag.py
airflow/dbt/: profiles.yml
airflow/dbt/course_pipeline/: dbt_project.yml
airflow/dbt/course_pipeline/models/marts/courses/: cleaned_courses.sql  schema.yml
airflow/dbt/final_project_pipeline/: dbt_project.yml
airflow/dbt/final_project_pipeline/models/marts/: schema.yml
airflow/dbt/final_project_pipeline/models/staging/: stg_linkedin_jobs.sql
airflow/dbt/job_pipeline/: dbt_project.yml
airflow/dbt/job_pipeline/models/marts/linkedin/: cleaned_linkedin_jobs.sql  schema.yml
airflow/dbt/job_pipeline/models/staging/: stg_linkedin_jobs.sql
airflow/scripts/: chunking.py  coursera_scrapper.py  linkedin_job_scraper.py  pinecone_rag.py  validations.py
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/agents/: crew_config.py  faq_agent.py  interview_agent.py  leetscrape_agent.py  recommender_agent.py  summary_generator.py
backend/agents/tools/: tools.py
backend/api/: fastapi_backend.py
backend/data_processing/: resume_processing.py  skill_matcher.py
backend/tests/: test_api.py  test_faq_agent.py  test_interview_agent.py  test_leetscrape_agent.py  test_recommender_agent.py
backend/utils/: interview_helpers.py  pdf_utils.py  pinecone_query.py  resume_summarizer.py  s3_utils.py
frontend/: pyproject.toml  streamlit_app.py
frontend/scripts/: pdf_helper.py  trigger_dag.py
leetscrape_service/: .dockerignore  Dockerfile  main.py  pyproject.toml
