[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["deodhar-ad <deodhar.ad@northeastern.edu>"]

package-mode = false

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
beautifulsoup4 = ">=4.13.3,<5.0.0"
pandas = ">=2.2.3,<3.0.0"
apache-airflow = ">=2.10.5,<3.0.0"
snowflake-connector-python = ">=3.14.0,<4.0.0"
dbt-core = ">=1.9.4,<2.0.0"
dbt-snowflake = ">=1.9.2,<2.0.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"