[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["Lenin Kumar Gorle <gorle.l@northeastern.edu>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
streamlit = ">=1.44.1,<2.0.0"
pyjwt = ">=2.10.1,<3.0.0"
snowflake-connector-python = ">=3.14.0,<4.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
selenium = ">=4.31.0,<5.0.0"
webdriver-manager = ">=4.0.2,<5.0.0"
dbt-core = ">=1.9.4,<2.0.0"
dbt-snowflake = ">=1.9.2,<2.0.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
