[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["deodhar-ad <deodhar.ad@northeastern.edu>"]

package-mode = false

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
beautifulsoup4 = ">=4.13.3,<5.0.0"
pandas = ">=2.2.3,<3.0.0"
apache-airflow = ">=2.10.5,<3.0.0"
snowflake-connector-python = ">=3.14.0,<4.0.0"
dbt-core = ">=1.9.4,<2.0.0"
dbt-snowflake = ">=1.9.2,<2.0.0"
requests = "^2.32.3"
python-dotenv = ">=1.1.0,<2.0.0"
selenium = ">=4.31.0,<5.0.0"
webdriver-manager = ">=4.0.2,<5.0.0"
asyncpraw = ">=7.8.1,<8.0.0"
sentence-transformers = "^2.5.1"
scikit-learn = ">=1.6.1,<2.0.0"
torch = { version = "^2.2.1+cpu", source = "pytorch" }
numpy = "^1.26.4"
pinecone = "^6.0.2"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"