[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Lenin Kumar Gorle <gorle.l@northeastern.edu>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
crewai = ">=0.114.0,<0.115.0"
boto3 = ">=1.37.34,<2.0.0"
snowflake-connector-python =  ">=3.14.0,<4.0.0"
markitdown = ">=0.1.1,<0.2.0"
pymupdf = ">=1.25.5,<2.0.0"
python-multipart = ">=0.0.20,<0.0.21"
reportlab = ">=4.3.1,<5.0.0"
matplotlib =  ">=3.10.1,<4.0.0"
sentence-transformers = ">=4.1.0,<5.0.0"
pinecone = "^6.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
