[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["deodhar-ad <deodhar.ad@northeastern.edu>"]

package-mode = false

[tool.poetry.dependencies]
python = ">=3.12.4,<3.13"
crewai = ">=0.114.0,<0.115.0"
python-dotenv = "^1.1.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.1"
snowflake-connector-python = "^3.14.0"
pyarrow = "<19.0.0"
markitdown = "^0.1.1"
pymupdf = "^1.25.5"
boto3 = "^1.37.34"
python-multipart = "^0.0.20"
reportlab = "^4.3.1"
matplotlib = "^3.10.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"