[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Lenin Kumar Gorle <gorle.l@northeastern.edu>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
streamlit =  ">=1.44.1,<2.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
snowflake-connector-python = ">=3.14.0,<4.0.0"
pyjwt = ">=2.10.1,<3.0.0"
fpdf = ">=1.7.2,<2.0.0"
markdown = ">=3.8,<4.0"
streamlit-ace = "^0.1.1"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
