[tool.poetry]
name = "leetscrape-service"
version = "0.1.0"
description = "LeetScrape microservice"

authors = ["deodhar-ad <deodhar.ad@northeastern.edu>"]

package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.110.0"
uvicorn = "^0.25.0"
leetscrape = "^1.0.1"
pydantic = "^1.10.4"
numpy = "1.26.4"
pandas = "1.5.3"
html2text = "^2025.4.15"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"