[project]
name = "leetscrape-poc"
version = "0.1.0"
description = ""
authors = [
    {name = "Lenin Kumar Gorle",email = "gorle.l@northeastern.edu"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "streamlit-code-editor (>=0.1.22,<0.2.0)",
    "leetscrape (>=1.0.1,<2.0.0)",
    "numpy (==1.26.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
